[tool.poetry]
name        = "pyxis"
version     = "0.2.0"
description = "An essential Python toolkit for peak productivity"
authors     = ["Vitaliy Boyarsky <boyarsky.vitaliy@live.com>"]
license     = "MIT"
readme      = "readme.md"

[tool.poetry.dependencies]
python = ">=3.7.2"

[tool.poetry.group.dev.dependencies]
pytest     = "~7.2.1"
pylint     = "~2.15.10"
isort      = "~5.11.5"
poethepoet = "~0.19.0"
pyyaml     = "^6.0"
boto3      = "^1.26.0"
pydantic   = "^1.10.5"

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
isort = { cmd = "isort ./src/ ./tests/", help = "Sort imports alphabetically." }
style = { cmd = "pylint ./src/ ./tests/ --rcfile=.pylintrc", help = "Run static code analyser.", deps = ["isort"] }
test  = { cmd = "pytest -v -p no:cacheprovider ./tests/", help = "Run unit tests." }
clean = { cmd = "rm -rf ./.pytest_cache ./build ./dist ./src/*.egg-info", help = "Clean workdir." }

[tool.isort]
line_length = 120
multi_line_output=3

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
