[project]
name = "pyxis"
version = "0.2.11"
description = "An essential Python toolkit for peak productivity"
authors = [
    { name = "Vitaliy Boyarsky", email = "boyarsky.vitaliy@live.com" },
]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.8.0"

dependencies = [
]

[dependency-groups]
dev = [
    "pytest==7.2.1",
    "pytest-cov==5.0.0",
    "pylint==2.15.10",
    "isort==5.11.5",
    "pyyaml==6.0.3",
    "boto3==1.26.0",
    "pydantic==1.10.5",
    "pyspark~=3.3.0",
    "setuptools>=75.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
