[project]
name = "vitalibo.pyxis"
version = "0.2.11"
description = "An essential Python toolkit for peak productivity"
authors = [
    { name = "Vitaliy Boyarsky", email = "boyarsky.vitaliy@live.com" },
]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.8.0"

dependencies = [
]

[dependency-groups]
dev = [
    "pytest==7.2.1",
    "pytest-cov==5.0.0",
    "ruff==0.15.6",
    "isort==5.11.5",
    "pyyaml==6.0.3",
    "boto3==1.26.0",
    "pydantic==1.10.5",
    "pyspark~=3.3.0",
    "setuptools>=75.3.4",
]

[tool.isort]
line_length = 120
multi_line_output = 3

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxis"]
